--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
         <div class="img">
           >
-          <img src="../assets/images/jlogo.jpg" />
+          <img src="assets/images/jlogo.jpg" />
         </div>
       </div>
     </div>
@@ -60,7 +60,7 @@
     <!-- About Section -->
     <section class="about" id="about">
       <div class="main">
-        <img src="../assets/images/about.jpg" alt="about me" />
+        <img src="assets/images/about.jpg" alt="about me" />
         <div class="about-text">
           <h2>About me</h2>
 
@@ -84,13 +84,13 @@
       </div>
       <div class="box">
         <div class="card">
-          <img src="../assets/images/work.png" />
+          <img src="assets/images/work.png" />
         </div>
         <div class="card">
-          <img src="../assets/images/work2.png" />
+          <img src="assets/images/work2.png" />
         </div>
         <div class="card">
-          <img src="../assets/images/work3.png" />
+          <img src="assets/images/work3.png" />
         </div>
       </div>
     </div>
